# mint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  m2.ini  main.cpp  mint.cpp  mint.ini  mint.ini.sample
